chore(vertical-nav): adjust spacing based on figma (#1825)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?
Remove gap and adjust based on figma changes
<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: CDE-2667

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
+++ b/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
@@ -75,8 +75,6 @@
       display: flex;
       flex-direction: column;
       flex: 1 1 auto;
-      gap: tokens.$cds-global-space-5;
-      padding-top: tokens.$cds-global-space-8;
 
       //Others
       overflow-y: auto;
@@ -184,7 +182,6 @@
       //Dims
       height: vertical-nav-variables.$clr-vertical-nav-item-height;
       padding: tokens.$cds-global-space-5 tokens.$cds-global-space-7;
-      margin-bottom: tokens.$cds-global-space-3;
 
       cds-icon {
         margin-right: 0;
@@ -234,7 +231,6 @@
     .nav-trigger + .nav-content {
       //Dims
       @include vertical-nav-divider();
-      padding-top: tokens.$cds-global-space-5;
     }
 
     .nav-group-text,
@@ -271,6 +267,7 @@
     .nav-header {
       //Dims
       padding: vertical-nav-variables.$clr-vertical-nav-header-padding;
+      min-height: vertical-nav-variables.$clr-vertical-nav-item-height;
 
       //Others
       @include mixins.generate-typography-token(
@@ -486,7 +483,6 @@
         //Dims
         border-top: 0;
         @include vertical-nav-divider('border-bottom');
-        padding-top: tokens.$cds-global-space-8;
       }
     }
   }
