fix(popover): adding API unit test for shadow dom and pr feedback

--- a/projects/demo/src/app/dropdown/dropdown-angular-shadow-root.demo.html
+++ b/projects/demo/src/app/dropdown/dropdown-angular-shadow-root.demo.html
@@ -5,9 +5,7 @@
   ~ The full license information can be found in LICENSE in the root directory of this project.
   -->
 
-<link rel="stylesheet" href="https://unpkg.com/@cds/core/global.min.css" />
-<link rel="stylesheet" href="https://unpkg.com/@cds/core/styles/theme.dark.min.css" />
-<link rel="stylesheet" href="https://unpkg.com/@clr/ui/clr-ui.min.css" />
+<link rel="stylesheet" href="/demo/styles.css" />
 
 <div class="clr-example squeeze demo-menu-height dropdown-demo">
   <clr-dropdown>
