fix: revert merge conflict issue

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -100,6 +100,7 @@
     overflow: auto;
     flex: 1 1 auto;
     margin-top: tokens.$cds-global-space-6;
+    display: flex;
 
     &.cdk-virtual-scrollable .datagrid-rows {
       flex-grow: 0;
@@ -287,6 +288,7 @@
     flex: 1 1 auto;
     display: flex;
     flex-flow: column nowrap;
+    width: 100%;
 
     &.is-replaced {
       flex-direction: row;
@@ -307,6 +309,7 @@
     flex: 1 1 auto;
     display: flex;
     flex-flow: row nowrap;
+    width: 100%;
 
     .datagrid-row-detail {
       display: flex;
@@ -349,6 +352,7 @@
     }
 
     .datagrid-row {
+      display: flex;
       @include clr-datagrid-header-bg;
 
       border-top: none;
@@ -379,12 +383,14 @@
     display: flex;
     flex: 1 1 auto;
     min-height: 100%;
+    width: 100%;
   }
 
   .datagrid-table {
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+    width: 100%;
 
     .datagrid-rows {
       display: flex;
