fix: remove various CSS custom property that are not used (#1805)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?
SCSS properties were not calculated because of missing interpolation

- clr-table-lineheight
- clr-datagrid-horizontal-padding
- clr-vertical-nav-trigger-collapsed-margin

Issue Number: N/A

## What is the new behavior?
All SCSS properties are now calculated.
`clr-vertical-nav-trigger-collapsed-margin` is removed because it is not
used.

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

## Other information

---------

Co-authored-by: Valentin Mladenov <mvalentin@vmware.com>
Co-authored-by: GitHub <noreply@github.com>
Co-authored-by: Daniel Tsanev <127101685+dtsanevmw@users.noreply.github.com>

--- a/projects/angular/src/data/_properties.tables.scss
+++ b/projects/angular/src/data/_properties.tables.scss
@@ -50,13 +50,9 @@
     --clr-table-bottomcellpadding: calc(var(--clr-table-cellpadding) - #{tokens.$cds-global-space-1});
     --clr-table-topcellpadding: #{tokens.$cds-global-space-6};
     --clr-table-fontsize: #{tokens.$cds-alias-typography-secondary-font-size};
-    // @deprecated in v17 not used for line height calculation, but for vertical padding calculation only
-    --clr-table-lineheight: mixins.baselinePx(14);
     --clr-table-cellpadding: #{tokens.$cds-global-space-6};
 
     --clr-table-compact-row-height: #{tokens.$cds-global-space-9};
-    --clr-table-compact-vertical-padding: calc(
-      (var(--clr-table-compact-row-height) - var(--clr-table-lineheight)) * 0.5
-    );
+    --clr-table-compact-vertical-padding: 0;
   }
 }
