--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -75,12 +75,15 @@
 }
 
 @mixin datagrid-action-button-styles($height: tokens.$cds-global-space-10) {
+  // Calculates how much padding to set on top/bottom and left/right by dividing the height by the icon size
+  $verticalPadding: calc(($height - datagrid-variables.$clr-datagrid-icon-size) / 2);
+  $horizontalPadding: calc(
+    (datagrid-variables.$clr-datagrid-fixed-column-size - datagrid-variables.$clr-datagrid-icon-size) / 2
+  );
   cursor: pointer;
   width: 100%;
   height: $height;
-  // Calculates how much padding to set on top and bottom by dividing the height by the icon size
-  padding: calc(($height - datagrid-variables.$clr-datagrid-icon-size) / 2)
-    calc((datagrid-variables.$clr-datagrid-fixed-column-size - datagrid-variables.$clr-datagrid-icon-size) / 2);
+  padding: $verticalPadding $horizontalPadding;
   display: inline-flex;
 }
 
@@ -422,7 +425,7 @@
       &:focus {
         outline: tokens.$cds-alias-object-interaction-outline;
         outline-color: -webkit-focus-ring-color;
-        outline-offset: calc(-1 * tokens.$cds-global-space-2);
+        outline-offset: datagrid-variables.$clr-datagrid-cell-outline-offset;
       }
 
       clr-dg-filter,
@@ -616,12 +619,20 @@
         min-width: datagrid-variables.$clr-datagrid-fixed-column-size;
       }
 
+      &.datagrid-row-actions,
+      &.datagrid-expandable-caret,
+      &.datagrid-detail-caret {
+        padding: 0;
+        button {
+          outline-offset: datagrid-variables.$clr-datagrid-cell-outline-offset;
+        }
+      }
+
       &.datagrid-row-actions {
         background: none;
       }
 
       &.datagrid-expandable-caret {
-        padding: 0;
         text-align: center;
       }
 
@@ -904,16 +915,11 @@
       }
     }
 
-    .datagrid-detail-caret {
-      &.datagrid-cell {
-        padding: 0;
-      }
-      .datagrid-detail-caret-button {
-        @include datagrid-action-button-styles(tables-variables.$clr-table-compact-row-height);
-      }
+    .datagrid-detail-caret .datagrid-detail-caret-button {
+      @include datagrid-action-button-styles(tables-variables.$clr-table-compact-row-height);
     }
 
-    .datagrid-cell:not(.datagrid-detail-caret):not(.datagrid-expandable-caret):not(.datagrid-row-actions) {
+    .datagrid-cell:not(.datagrid-detail-caret, .datagrid-expandable-caret, .datagrid-row-actions) {
       clr-icon {
         margin-top: calc((-1 * tokens.$cds-global-space-3) - tokens.$cds-global-space-1);
         margin-bottom: calc(-1 * tokens.$cds-global-space-3);
@@ -940,7 +946,6 @@
 
       .datagrid-expandable-caret-button {
         @include datagrid-action-button-styles(tables-variables.$clr-table-compact-row-height);
-        outline-offset: datagrid-variables.$clr-datagrid-compact-outline-offset;
       }
 
       .datagrid-expandable-caret-icon {
@@ -954,9 +959,6 @@
     }
 
     .datagrid-row-actions {
-      &.datagrid-cell {
-        padding: 0;
-      }
       .datagrid-action-toggle {
         @include datagrid-action-button-styles(tables-variables.$clr-table-compact-row-height);
       }
@@ -976,10 +978,6 @@
 
       .pagination {
         line-height: tokens.$cds-global-space-9;
-      }
-
-      .column-switch-wrapper .column-toggle--action {
-        outline-offset: datagrid-variables.$clr-datagrid-compact-outline-offset;
       }
 
       .clr-form-control-disabled .datagrid-footer-select.clr-checkbox-wrapper input[type='checkbox']:checked + label {
@@ -1262,10 +1260,6 @@
   .datagrid-detail-caret {
     display: flex;
     justify-content: center;
-
-    &.datagrid-cell {
-      padding: 0;
-    }
 
     .datagrid-detail-caret-button {
       @include mixins.clr-no-styles-button();
