--- a/projects/angular/src/data/datagrid/_properties.datagrid.scss
+++ b/projects/angular/src/data/datagrid/_properties.datagrid.scss
@@ -86,6 +86,6 @@
     --clr-datagrid-column-separator-expandby: #{tokens.$cds-global-space-6};
     --clr-datagrid-icon-size: #{tokens.$cds-global-space-7};
     --clr-datagrid-action-arrow-size: #{tokens.$cds-global-space-4};
-    --clr-datagrid-compact-outline-offset: calc(-1 * tokens.$cds-global-space-3);
+    --clr-datagrid-cell-outline-offset: calc(-1 * #{tokens.$cds-global-space-2});
   }
 }
