--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -74,6 +74,19 @@
   }
 }
 
+@mixin datagrid-action-button-styles($height: tokens.$cds-global-space-10) {
+  // Calculates how much padding to set on top/bottom and left/right by dividing the height by the icon size
+  $verticalPadding: calc(($height - datagrid-variables.$clr-datagrid-icon-size) / 2);
+  $horizontalPadding: calc(
+    (datagrid-variables.$clr-datagrid-fixed-column-size - datagrid-variables.$clr-datagrid-icon-size) / 2
+  );
+  cursor: pointer;
+  width: 100%;
+  height: $height;
+  padding: $verticalPadding $horizontalPadding;
+  display: inline-flex;
+}
+
 @include meta.load-css('properties.datagrid');
 
 @include mixins.exports('datagrid.clarity') {
@@ -118,8 +131,7 @@
 
     .datagrid-expandable-caret-button {
       @include mixins.clr-no-styles-button();
-      cursor: pointer;
-      @include mixins.equilateral(tokens.$cds-global-space-9);
+      @include datagrid-action-button-styles();
     }
 
     .datagrid-expandable-caret-icon {
@@ -413,7 +425,7 @@
       &:focus {
         outline: tokens.$cds-alias-object-interaction-outline;
         outline-color: -webkit-focus-ring-color;
-        outline-offset: calc(-1 * tokens.$cds-global-space-2);
+        outline-offset: datagrid-variables.$clr-datagrid-cell-outline-offset;
       }
 
       clr-dg-filter,
@@ -607,12 +619,20 @@
         min-width: datagrid-variables.$clr-datagrid-fixed-column-size;
       }
 
+      &.datagrid-row-actions,
+      &.datagrid-expandable-caret,
+      &.datagrid-detail-caret {
+        padding: 0;
+        button {
+          outline-offset: datagrid-variables.$clr-datagrid-cell-outline-offset;
+        }
+      }
+
       &.datagrid-row-actions {
         background: none;
       }
 
       &.datagrid-expandable-caret {
-        padding: tokens.$cds-global-space-3 0;
         text-align: center;
       }
 
@@ -622,9 +642,13 @@
         outline-offset: calc(-1 * tokens.$cds-global-space-2);
       }
 
+      clr-dg-action-overflow {
+        display: contents;
+      }
+
       .datagrid-action-toggle {
         @include mixins.clr-no-styles-button();
-        @include mixins.equilateral(tokens.$cds-global-space-7);
+        @include datagrid-action-button-styles();
 
         cds-icon,
         clr-icon {
@@ -891,11 +915,11 @@
       }
     }
 
-    .datagrid-detail-caret.datagrid-cell {
-      padding: 0;
+    .datagrid-detail-caret .datagrid-detail-caret-button {
+      @include datagrid-action-button-styles(tables-variables.$clr-table-compact-row-height);
     }
 
-    .datagrid-cell {
+    .datagrid-cell:not(.datagrid-detail-caret, .datagrid-expandable-caret, .datagrid-row-actions) {
       clr-icon {
         margin-top: calc((-1 * tokens.$cds-global-space-3) - tokens.$cds-global-space-1);
         margin-bottom: calc(-1 * tokens.$cds-global-space-3);
@@ -921,22 +945,22 @@
       }
 
       .datagrid-expandable-caret-button {
-        @include mixins.clr-no-styles-button();
-        @include mixins.equilateral(tokens.$cds-global-space-9);
-        outline-offset: datagrid-variables.$clr-datagrid-compact-outline-offset;
+        @include datagrid-action-button-styles(tables-variables.$clr-table-compact-row-height);
       }
 
       .datagrid-expandable-caret-icon {
         margin: 0;
       }
 
-      &.datagrid-cell {
-        padding: 0;
-      }
-
       &.datagrid-column {
         padding-top: tables-variables.$clr-table-compact-vertical-padding;
         padding-bottom: tables-variables.$clr-table-compact-vertical-padding;
+      }
+    }
+
+    .datagrid-row-actions {
+      .datagrid-action-toggle {
+        @include datagrid-action-button-styles(tables-variables.$clr-table-compact-row-height);
       }
     }
 
@@ -954,10 +978,6 @@
 
       .pagination {
         line-height: tokens.$cds-global-space-9;
-      }
-
-      .column-switch-wrapper .column-toggle--action {
-        outline-offset: datagrid-variables.$clr-datagrid-compact-outline-offset;
       }
 
       .clr-form-control-disabled .datagrid-footer-select.clr-checkbox-wrapper input[type='checkbox']:checked + label {
@@ -1241,14 +1261,9 @@
     display: flex;
     justify-content: center;
 
-    &.datagrid-cell {
-      padding: tokens.$cds-global-space-3 0;
-    }
-
     .datagrid-detail-caret-button {
       @include mixins.clr-no-styles-button();
-      cursor: pointer;
-      @include mixins.equilateral(tokens.$cds-global-space-9);
+      @include datagrid-action-button-styles();
 
       &:disabled cds-icon.datagrid-detail-caret-icon {
         --color: #{tokens.$cds-alias-object-interaction-color-disabled};
