feat(wizard): use red background color for current error step
I missed this in 3dad2efe0f0ca0e66f3004f8cacfe6a926b8b0fc (#1824).

--- a/projects/angular/src/wizard/_variables.wizard.scss
+++ b/projects/angular/src/wizard/_variables.wizard.scss
@@ -26,6 +26,7 @@ $clr-wizard-stepnav-item-border-color--active: var(--clr-wizard-stepnav-item-bor
 $clr-wizard-stepnav-selected-border-color: var(--clr-wizard-stepnav-selected-border-color) !default;
 $clr-wizard-stepnav-active-bgcolor: var(--clr-wizard-stepnav-active-bgcolor) !default;
 $clr-wizard-stepnav-selected-bgcolor: var(--clr-wizard-stepnav-selected-bgcolor) !default;
+$clr-wizard-stepnav-selected-error-bgcolor: var(--clr-wizard-stepnav-selected-error-bgcolor) !default;
 $clr-wizard-stepnav-selected-hover-bgcolor: var(--clr-wizard-stepnav-selected-hover-bgcolor) !default;
 $clr-wizard-stepnav-selected-active-bgcolor: var(--clr-wizard-stepnav-selected-active-bgcolor) !default;
 $clr-wizard-stepnav-link-error-icon-color: var(--clr-wizard-stepnav-link-error-icon-color) !default;
