--- a/projects/demo/src/app/wizard/wizard-basic.demo.html
+++ b/projects/demo/src/app/wizard/wizard-basic.demo.html
@@ -6,10 +6,14 @@
   -->
 
 <clr-toggle-container>
-  <label>Size</label>
+  <label>Options</label>
   <clr-toggle-wrapper>
     <label>Full Screen</label>
     <input clrToggle type="checkbox" [(ngModel)]="fullScreen" name="full-screen" />
+  </clr-toggle-wrapper>
+  <clr-toggle-wrapper>
+    <label>Scrolling Steps</label>
+    <input clrToggle type="checkbox" [(ngModel)]="scrollingSteps" name="scrolling-steps" />
   </clr-toggle-wrapper>
 </clr-toggle-container>
 
@@ -199,11 +203,13 @@
     </p>
   </clr-wizard-page>
 
-  <clr-wizard-page>
-    <ng-template clrPageTitle>Title for page 3</ng-template>
-    <!-- mandatory -->
-    <ng-template clrPageNavTitle>Step 3</ng-template>
-    <!-- optional -->
-    <p class="content-for-page-3">Content for step 3</p>
-  </clr-wizard-page>
+  <ng-container *ngIf="scrollingSteps">
+    <clr-wizard-page
+      *ngFor="let number of [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]"
+    >
+      <ng-template clrPageTitle>Title for page {{number}}</ng-template>
+      <ng-template clrPageNavTitle>Step {{number}}</ng-template>
+      <p>Content for step {{number}}</p>
+    </clr-wizard-page>
+  </ng-container>
 </clr-wizard>
