--- a/projects/angular/src/wizard/_wizard.clarity.scss
+++ b/projects/angular/src/wizard/_wizard.clarity.scss
@@ -138,7 +138,6 @@
       max-width: 34%;
       display: flex;
       flex-direction: column;
-      order: -1;
       overflow: hidden;
       border-right: variables.$clr-global-borderwidth solid wizard-variables.$clr-wizard-stepnav-border-color;
       background-color: wizard-variables.$clr-wizard-stepnav-bgcolor;
@@ -167,8 +166,9 @@
 
     .clr-wizard-stepnav-item {
       display: block;
-      border-left: wizard-variables.$clr-wizard-stepnav-border-size solid
-        wizard-variables.$clr-wizard-stepnav-item-border-color;
+      border-left-width: wizard-variables.$clr-wizard-stepnav-border-size;
+      border-left-style: solid;
+      border-color: wizard-variables.$clr-wizard-stepnav-item-border-color;
 
       margin-bottom: tokens.$cds-global-space-1;
       color: wizard-variables.$clr-wizard-stepnav-text;
@@ -188,7 +188,7 @@
       &.active {
         color: wizard-variables.$clr-wizard-stepnav-text--active;
         background-color: wizard-variables.$clr-wizard-stepnav-selected-bgcolor;
-        border-left-color: wizard-variables.$clr-wizard-stepnav-selected-border-color;
+        border-color: wizard-variables.$clr-wizard-stepnav-selected-border-color;
 
         &:hover {
           background-color: wizard-variables.$clr-wizard-stepnav-selected-hover-bgcolor;
@@ -284,11 +284,6 @@
       @include mixins.equilateral(100%);
       // firefox fix
       max-height: 100%;
-
-      // edge fix, related to the firefox fix above
-      .modal-nav {
-        height: auto;
-      }
     }
 
     .clr-wizard-footer-buttons {
@@ -510,6 +505,78 @@
 
     .clr-wizard-stepnav {
       padding-top: tokens.$cds-global-space-9;
+    }
+  }
+
+  .clr-wizard.wizard-horizontal {
+    .clr-wizard-title-wrapper {
+      display: flex;
+      align-items: center;
+      padding: wizard-variables.$clr-wizard-default-space;
+
+      .clr-wizard-title {
+        flex: 1;
+        padding: 0;
+      }
+    }
+
+    .modal-content-wrapper {
+      flex-direction: column;
+    }
+
+    .modal-content,
+    .clr-wizard-stepnav-wrapper {
+      width: 100%;
+    }
+
+    .modal-content {
+      flex: 1;
+    }
+
+    .clr-wizard-stepnav-wrapper {
+      flex: 0;
+      height: unset;
+      max-width: unset;
+      overflow: unset;
+      border-right: 0;
+
+      .clr-wizard-stepnav {
+        display: flex;
+        padding: 0 wizard-variables.$clr-wizard-default-space 0 wizard-variables.$clr-wizard-default-space;
+      }
+
+      .clr-wizard-stepnav-nav--with-one-scroll-button {
+        width: calc(100% - tokens.$cds-global-space-12);
+      }
+
+      .clr-wizard-stepnav-nav--with-two-scroll-buttons {
+        width: calc(100% - 2 * tokens.$cds-global-space-12);
+      }
+
+      .clr-wizard-stepnav-scroll-button {
+        margin: 0;
+        min-width: tokens.$cds-global-space-12;
+      }
+
+      .clr-wizard-stepnav-list {
+        display: flex;
+        overflow-x: hidden;
+      }
+
+      .clr-wizard-stepnav-item {
+        border-left: 0;
+        border-bottom-width: wizard-variables.$clr-wizard-stepnav-border-size;
+        border-bottom-style: solid;
+        min-width: calc(tokens.$cds-global-space-15 * 1.25);
+      }
+
+      .clr-wizard-stepnav-link {
+        align-items: start;
+
+        .clr-wizard-stepnav-link-icon > cds-icon {
+          margin-top: tokens.$cds-global-space-2; // align icon with the text
+        }
+      }
     }
   }
 
