--- a/projects/demo/src/app/datagrid/density/density.html
+++ b/projects/demo/src/app/datagrid/density/density.html
@@ -49,7 +49,7 @@
       <label>Selectable</label>
     </clr-checkbox-wrapper>
     <clr-checkbox-wrapper>
-      <input type="checkbox" clrCheckbox name="remove-row-detail" [(ngModel)]="showRowDetail" />
+      <input type="checkbox" clrCheckbox name="show-row-detail" [(ngModel)]="showRowDetail" />
       <label>Show Row Detail</label>
     </clr-checkbox-wrapper>
     <clr-checkbox-wrapper>
@@ -116,7 +116,7 @@
       ullamcorper facilisis lacus. Vivamus sagittis suscipit libero, et tristique justo consectetur eget.</clr-dg-cell
     >
 
-    <ng-container ngProjectAs="clr-dg-row-detail" *ngIf="!removeRowDetail">
+    <ng-container ngProjectAs="clr-dg-row-detail" *ngIf="showRowDetail">
       <clr-dg-row-detail *clrIfExpanded [clrDgReplace]="replace">
         <ng-template [ngIf]="detail === 'default'">
           <a *ngIf="showAnchor" target="_blank" href="javascript:void(0)">interactive anchor</a>
