--- a/projects/angular/src/utils/_components.clarity.scss
+++ b/projects/angular/src/utils/_components.clarity.scss
@@ -13,7 +13,7 @@
 
 // Layout/Grid
 @forward '../layout/grid/grid';
-@forward '../layout/density/';
+@forward '../layout/density';
 
 @forward '../typography/typography';
 
