--- a/projects/angular/src/emphasis/alert/_variables.alert.scss
+++ b/projects/angular/src/emphasis/alert/_variables.alert.scss
@@ -5,11 +5,12 @@
  * The full license information can be found in LICENSE in the root directory of this project.
  */
 @use '../../utils/variables/variables';
+@use '../../layout/density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 // TYPOGRAPHIC STYLES
 // Usage: ./_alert.clarity.scss
-$clr-alert-font-size: #{tokens.$cds-alias-typography-font-size-3} !default;
+$clr-alert-font-size: #{density.$clr-base-typography-font-size-inline} !default;
 $clr-alert-letter-spacing: #{tokens.$cds-alias-typography-secondary-letter-spacing} !default;
 
 // Dimensions & Layout
