feat(density): add multi row token variables and use cds token

--- a/projects/angular/src/layout/density/_variables.density.scss
+++ b/projects/angular/src/layout/density/_variables.density.scss
@@ -30,6 +30,13 @@ $clr-base-vertical-offset-s: var(--clr-base-vertical-offset-s);
 $clr-base-vertical-offset-m: var(--clr-base-vertical-offset-m);
 $clr-base-vertical-offset-xl: var(--clr-base-vertical-offset-xl);
 
+$clr-base-vertical-offset-multi-row-s: var(--clr-base-vertical-offset-multi-row-s);
+$clr-base-vertical-offset-multi-row-m: var(--clr-base-vertical-offset-multi-row-m);
+$clr-base-vertical-offset-multi-row-inline-s: var(--clr-base-vertical-offset-multi-row-inline-s);
+$clr-base-vertical-offset-multi-row-inline-m: var(--clr-base-vertical-offset-multi-row-inline-m);
+$clr-base-vertical-offset-multi-row-outline-s: var(--clr-base-vertical-offset-multi-row-outline-s);
+$clr-base-vertical-offset-multi-row-outline-m: var(--clr-base-vertical-offset-multi-row-outline-m);
+
 $clr-base-horizontal-offset-m: var(--clr-base-horizontal-offset-m);
 $clr-base-horizontal-offset-l: var(--clr-base-horizontal-offset-l);
 $clr-base-horizontal-offset-xl: var(--clr-base-horizontal-offset-xl);
