--- a/projects/angular/src/layout/density/_properties.density.scss
+++ b/projects/angular/src/layout/density/_properties.density.scss
@@ -34,7 +34,7 @@
   --clr-base-vertical-offset-m: #{tokens.$cds-global-space-5};
   --clr-base-vertical-offset-xl: #{tokens.$cds-global-space-9};
 
-  --clr-base-vertical-offset-multi-row-s: #{mixins.baselinePx(6)};
+  --clr-base-vertical-offset-multi-row-s: #{tokens.$cds-global-space-4};
   --clr-base-vertical-offset-multi-row-m: #{mixins.baselinePx(10)};
   --clr-base-vertical-offset-multi-row-inline-s: #{tokens.$cds-global-space-3};
   --clr-base-vertical-offset-multi-row-inline-m: #{tokens.$cds-global-space-5};
@@ -107,7 +107,7 @@
     --clr-base-vertical-offset-multi-row-m: #{tokens.$cds-global-space-5};
     --clr-base-vertical-offset-multi-row-inline-s: #{tokens.$cds-global-space-3};
     --clr-base-vertical-offset-multi-row-inline-m: #{tokens.$cds-global-space-5};
-    --clr-base-vertical-offset-multi-row-outline-s: #{mixins.baselinePx(6)};
+    --clr-base-vertical-offset-multi-row-outline-s: #{tokens.$cds-global-space-4};
     --clr-base-vertical-offset-multi-row-outline-m: #{mixins.baselinePx(10)};
 
     --clr-base-horizontal-offset-m: #{tokens.$cds-global-space-5};
@@ -179,7 +179,7 @@
     --clr-base-vertical-offset-multi-row-inline-s: #{tokens.$cds-global-space-2};
     --clr-base-vertical-offset-multi-row-inline-m: #{tokens.$cds-global-space-3};
     --clr-base-vertical-offset-multi-row-outline-s: #{tokens.$cds-global-space-3};
-    --clr-base-vertical-offset-multi-row-outline-m: #{mixins.baselinePx(6)};
+    --clr-base-vertical-offset-multi-row-outline-m: #{tokens.$cds-global-space-4};
 
     --clr-base-horizontal-offset-m: #{tokens.$cds-global-space-4};
     --clr-base-horizontal-offset-l: #{tokens.$cds-global-space-6};
@@ -250,7 +250,7 @@
   //   --clr-base-vertical-offset-multi-row-inline-s: #{tokens.$cds-global-space-2};
   //   --clr-base-vertical-offset-multi-row-inline-m: #{tokens.$cds-global-space-3};
   //   --clr-base-vertical-offset-multi-row-outline-s: #{tokens.$cds-global-space-3};
-  //   --clr-base-vertical-offset-multi-row-outline-m: #{mixins.baselinePx(6)};
+  //   --clr-base-vertical-offset-multi-row-outline-m: #{tokens.$cds-global-space-4};
 
   //   --clr-base-horizontal-offset-m: #{tokens.$cds-global-space-3};
   //   --clr-base-horizontal-offset-l: #{tokens.$cds-global-space-5};
