--- a/projects/angular/src/utils/_mixins.scss
+++ b/projects/angular/src/utils/_mixins.scss
@@ -359,7 +359,7 @@ $typography-tokens: (
     line-height: #{density.$clr-base-typography-line-height-16},
     letter-spacing: #{baselinePx(0.2)},
   ),
-  'TableHeaders-11-SB-CPT': (
+  'ColumnHeader-11-SB-CPT': (
     font-size: #{density.$clr-base-typography-font-size-caption},
     font-weight: #{tokens.$cds-alias-typography-font-weight-semibold},
     line-height: #{density.$clr-base-typography-line-height-16},
