--- a/projects/angular/src/data/_tables.clarity.scss
+++ b/projects/angular/src/data/_tables.clarity.scss
@@ -47,19 +47,12 @@
 
     #{$td} {
       min-height: tokens.$cds-global-space-10;
-      @include mixins.generate-typography-token(
-        'SECONDARY-14-RG-CPT',
-        (
-          font-size: table-variables.$clr-table-data-cell-font-size,
-          line-height: table-variables.$clr-table-data-cell-line-height,
-          font-weight: table-variables.$clr-table-data-cell-font-weight,
-        )
-      );
+      @include mixins.generate-typography-token('BODY-14-RG-CPT');
     }
 
     #{$th} {
       color: table-variables.$clr-thead-color;
-      @include mixins.generate-typography-token('TableHeaders-11-SB-CPT');
+      @include mixins.generate-typography-token('ColumnHeader-11-SB-CPT');
       background-color: table-variables.$clr-thead-bgcolor;
       vertical-align: middle;
       border-bottom-style: solid;
