--- a/projects/demo/src/app/layout/layout-size.html
+++ b/projects/demo/src/app/layout/layout-size.html
@@ -40,7 +40,7 @@
           </clr-alert-item>
         </clr-alert>
 
-        <clr-alert clrAlertType="unknown" [clrAlertLightweight]="true">
+        <clr-alert clrAlertType="unknown" [clrAlertLightweight]="true" [clrAlertSizeSmall]="true">
           <clr-alert-item>
             <span class="alert-text">Unknown Lightweight alert</span>
           </clr-alert-item>
