--- a/projects/angular/src/utils/_mixins.scss
+++ b/projects/angular/src/utils/_mixins.scss
@@ -10,6 +10,7 @@
 @use 'variables/variables';
 @use '../layout/density/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
+@use '../layout/density/variables.density' as density;
 
 //Credit: Zurb Foundation for Apps https://github.com/zurb/foundation-apps/blob/master/scss/helpers/_functions.scss
 //Keep track of modules that have been imported, so we don't import more than once
