--- a/projects/angular/src/layout/density/_properties.density.scss
+++ b/projects/angular/src/layout/density/_properties.density.scss
@@ -24,14 +24,21 @@
   --clr-base-typography-line-height-24: #{tokens.$cds-global-space-9};
   --clr-base-typography-line-height-32: #{tokens.$cds-global-space-10};
 
+  --clr-base-border-stroke: #{tokens.$cds-global-space-2};
+
   --clr-base-border-radius-xs: #{tokens.$cds-global-space-2};
   --clr-base-border-radius-s: #{tokens.$cds-global-space-3};
   --clr-base-border-radius-m: #{tokens.$cds-global-space-5};
   --clr-base-border-radius-l: #{tokens.$cds-global-space-6};
   --clr-base-border-radius-xl: #{tokens.$cds-global-space-7};
 
+  --clr-base-offset-0: #{tokens.$cds-global-space-0};
+
+  --clr-base-vertical-offset-2xs: #{tokens.$cds-global-space-2};
+  --clr-base-vertical-offset-xs: #{tokens.$cds-global-space-3};
   --clr-base-vertical-offset-s: #{tokens.$cds-global-space-4};
   --clr-base-vertical-offset-m: #{tokens.$cds-global-space-5};
+  --clr-base-vertical-offset-l: #{tokens.$cds-global-space-6};
   --clr-base-vertical-offset-xl: #{tokens.$cds-global-space-9};
 
   --clr-base-vertical-offset-multi-row-s: #{tokens.$cds-global-space-4};
@@ -41,6 +48,9 @@
   --clr-base-vertical-offset-multi-row-outline-s: #{tokens.$cds-global-space-5};
   --clr-base-vertical-offset-multi-row-outline-m: #{tokens.$cds-global-space-6};
 
+  --clr-base-horizontal-offset-2xs: #{tokens.$cds-global-space-2};
+  --clr-base-horizontal-offset-xs: #{tokens.$cds-global-space-3};
+  --clr-base-horizontal-offset-s: #{tokens.$cds-global-space-4};
   --clr-base-horizontal-offset-m: #{tokens.$cds-global-space-5};
   --clr-base-horizontal-offset-l: #{tokens.$cds-global-space-6};
   --clr-base-horizontal-offset-xl: #{tokens.$cds-global-space-9};
@@ -49,6 +59,7 @@
   --clr-base-row-height-s: #{tokens.$cds-global-space-9};
   --clr-base-row-height-m: #{tokens.$cds-global-space-11};
   --clr-base-row-height-l: #{mixins.baselinePx(40)};
+  --clr-base-row-height-20: #{mixins.baselinePx(20)};
   --clr-base-dg-row-height: #{tokens.$cds-global-space-10};
 
   --clr-base-gap-xs: #{tokens.$cds-global-space-3};
@@ -64,6 +75,7 @@
   --clr-base-icon-size-3xl: #{tokens.$cds-global-space-11};
   --clr-base-icon-size-4xl: #{tokens.$cds-global-space-13};
 
+  --clr-base-layout-space-0: #{tokens.$cds-global-space-0};
   --clr-base-layout-space-4xs: #{tokens.$cds-global-space-1};
   --clr-base-layout-space-3xs: #{tokens.$cds-global-space-2};
   --clr-base-layout-space-2xs: #{tokens.$cds-global-space-3};
@@ -76,6 +88,9 @@
   --clr-base-layout-space-3xl: #{tokens.$cds-global-space-12};
   --clr-base-layout-space-4xl: #{mixins.baselinePx(76)};
   --clr-base-layout-space-5xl: #{mixins.baselinePx(112)};
+
+  --clr-base-icon-tooltip: #{mixins.baselinePx(18)};
+  --clr-base-spinner-72: #{tokens.$cds-global-space-14};
 
   [clr-density='regular'] {
     --clr-base-typography-font-size-caption-small: #{mixins.baselinePx(10)};
@@ -93,14 +108,21 @@
     --clr-base-typography-line-height-24: #{tokens.$cds-global-space-9};
     --clr-base-typography-line-height-32: #{tokens.$cds-global-space-10};
 
+    --clr-base-border-stroke: #{tokens.$cds-global-space-2};
+
     --clr-base-border-radius-xs: #{tokens.$cds-global-space-2};
     --clr-base-border-radius-s: #{tokens.$cds-global-space-3};
     --clr-base-border-radius-m: #{tokens.$cds-global-space-5};
     --clr-base-border-radius-l: #{tokens.$cds-global-space-6};
     --clr-base-border-radius-xl: #{tokens.$cds-global-space-7};
 
+    --clr-base-offset-0: #{tokens.$cds-global-space-0};
+
+    --clr-base-vertical-offset-2xs: #{tokens.$cds-global-space-2};
+    --clr-base-vertical-offset-xs: #{tokens.$cds-global-space-3};
     --clr-base-vertical-offset-s: #{tokens.$cds-global-space-3};
     --clr-base-vertical-offset-m: #{tokens.$cds-global-space-4};
+    --clr-base-vertical-offset-l: #{tokens.$cds-global-space-6};
     --clr-base-vertical-offset-xl: #{tokens.$cds-global-space-9};
 
     --clr-base-vertical-offset-multi-row-s: #{tokens.$cds-global-space-3};
@@ -110,6 +132,9 @@
     --clr-base-vertical-offset-multi-row-outline-s: #{tokens.$cds-global-space-4};
     --clr-base-vertical-offset-multi-row-outline-m: #{mixins.baselinePx(10)};
 
+    --clr-base-horizontal-offset-2xs: #{tokens.$cds-global-space-2};
+    --clr-base-horizontal-offset-xs: #{tokens.$cds-global-space-3};
+    --clr-base-horizontal-offset-s: #{tokens.$cds-global-space-3};
     --clr-base-horizontal-offset-m: #{tokens.$cds-global-space-5};
     --clr-base-horizontal-offset-l: #{tokens.$cds-global-space-6};
     --clr-base-horizontal-offset-xl: #{tokens.$cds-global-space-9};
@@ -123,6 +148,7 @@
     --clr-base-gap-s: #{tokens.$cds-global-space-5};
     --clr-base-gap-m: #{tokens.$cds-global-space-6};
 
+    --clr-base-row-height-20: #{mixins.baselinePx(20)};
     --clr-base-dg-row-height: #{tokens.$cds-global-space-10};
 
     --clr-base-icon-size-xs: #{tokens.$cds-global-space-6};
@@ -134,6 +160,7 @@
     --clr-base-icon-size-3xl: #{tokens.$cds-global-space-10};
     --clr-base-icon-size-4xl: #{tokens.$cds-global-space-13};
 
+    --clr-base-layout-space-0: #{tokens.$cds-global-space-0};
     --clr-base-layout-space-4xs: #{tokens.$cds-global-space-1};
     --clr-base-layout-space-3xs: #{tokens.$cds-global-space-2};
     --clr-base-layout-space-2xs: #{tokens.$cds-global-space-3};
@@ -146,6 +173,9 @@
     --clr-base-layout-space-3xl: #{tokens.$cds-global-space-12};
     --clr-base-layout-space-4xl: #{tokens.$cds-global-space-13};
     --clr-base-layout-space-5xl: #{tokens.$cds-global-space-15};
+
+    --clr-base-icon-tooltip: var(--clr-base-icon-size-s);
+    --clr-base-spinner-72: var(--clr-base-layout-space-4xl);
   }
 
   [clr-density='compact'] {
@@ -164,14 +194,21 @@
     --clr-base-typography-line-height-24: #{mixins.baselinePx(22)};
     --clr-base-typography-line-height-32: #{mixins.baselinePx(28)};
 
+    --clr-base-border-stroke: #{tokens.$cds-global-space-1};
+
     --clr-base-border-radius-xs: #{tokens.$cds-global-space-2};
     --clr-base-border-radius-s: #{tokens.$cds-global-space-3};
     --clr-base-border-radius-m: #{tokens.$cds-global-space-5};
     --clr-base-border-radius-l: #{tokens.$cds-global-space-6};
     --clr-base-border-radius-xl: #{tokens.$cds-global-space-7};
 
+    --clr-base-offset-0: #{tokens.$cds-global-space-0};
+
+    --clr-base-vertical-offset-2xs: #{tokens.$cds-global-space-1};
+    --clr-base-vertical-offset-xs: #{tokens.$cds-global-space-2};
     --clr-base-vertical-offset-s: #{tokens.$cds-global-space-2};
     --clr-base-vertical-offset-m: #{mixins.baselinePx(3)};
+    --clr-base-vertical-offset-l: #{tokens.$cds-global-space-5};
     --clr-base-vertical-offset-xl: #{mixins.baselinePx(20)};
 
     --clr-base-vertical-offset-multi-row-s: #{tokens.$cds-global-space-2};
@@ -181,6 +218,9 @@
     --clr-base-vertical-offset-multi-row-outline-s: #{tokens.$cds-global-space-3};
     --clr-base-vertical-offset-multi-row-outline-m: #{tokens.$cds-global-space-4};
 
+    --clr-base-horizontal-offset-2xs: #{tokens.$cds-global-space-1};
+    --clr-base-horizontal-offset-xs: #{tokens.$cds-global-space-2};
+    --clr-base-horizontal-offset-s: #{tokens.$cds-global-space-2};
     --clr-base-horizontal-offset-m: #{tokens.$cds-global-space-4};
     --clr-base-horizontal-offset-l: #{tokens.$cds-global-space-6};
     --clr-base-horizontal-offset-xl: #{mixins.baselinePx(20)};
@@ -194,6 +234,7 @@
     --clr-base-gap-s: #{tokens.$cds-global-space-4};
     --clr-base-gap-m: #{tokens.$cds-global-space-6};
 
+    --clr-base-row-height-20: #{tokens.$cds-global-space-7};
     --clr-base-dg-row-height: #{tokens.$cds-global-space-9};
 
     --clr-base-icon-size-xs: #{tokens.$cds-global-space-6};
@@ -205,6 +246,7 @@
     --clr-base-icon-size-3xl: #{mixins.baselinePx(28)};
     --clr-base-icon-size-4xl: #{mixins.baselinePx(60)};
 
+    --clr-base-layout-space-0: #{tokens.$cds-global-space-0};
     --clr-base-layout-space-4xs: #{tokens.$cds-global-space-1};
     --clr-base-layout-space-3xs: #{tokens.$cds-global-space-2};
     --clr-base-layout-space-2xs: #{tokens.$cds-global-space-3};
@@ -217,6 +259,9 @@
     --clr-base-layout-space-3xl: #{mixins.baselinePx(40)};
     --clr-base-layout-space-4xl: #{mixins.baselinePx(56)};
     --clr-base-layout-space-5xl: #{mixins.baselinePx(80)};
+
+    --clr-base-icon-tooltip: var(--clr-base-icon-size-s);
+    --clr-base-spinner-72: var(--clr-base-layout-space-4xl);
   }
   // NOT SUPPORTED AT THE MOMENT
   // [clr-density='ultra-compact'] {
@@ -235,14 +280,21 @@
   //   --clr-base-typography-line-height-24: #{mixins.baselinePx(20)};
   //   --clr-base-typography-line-height-32: #{mixins.baselinePx(20)};
 
+  //   --clr-base-border-stroke: #{tokens.$cds-global-space-1};
+
   //   --clr-base-border-radius-xs: #{tokens.$cds-global-space-2};
   //   --clr-base-border-radius-s: #{tokens.$cds-global-space-3};
   //   --clr-base-border-radius-m: #{tokens.$cds-global-space-5};
   //   --clr-base-border-radius-l: #{tokens.$cds-global-space-6};
   //   --clr-base-border-radius-xl: #{tokens.$cds-global-space-7};
 
+  //   --clr-base-offset-0: #{tokens.$cds-global-space-0};
+
+  //   --clr-base-vertical-offset-2xs: #{tokens.$cds-global-space-0};
+  //   --clr-base-vertical-offset-xs: #{tokens.$cds-global-space-2};
   //   --clr-base-vertical-offset-s: #{tokens.$cds-global-space-2};
   //   --clr-base-vertical-offset-m: #{tokens.$cds-global-space-2};
+  //   --clr-base-vertical-offset-l: #{tokens.$cds-global-space-4};
   //   --clr-base-vertical-offset-xl: #{tokens.$cds-global-space-7};
 
   //   --clr-base-vertical-offset-multi-row-s: #{tokens.$cds-global-space-2};
@@ -252,6 +304,9 @@
   //   --clr-base-vertical-offset-multi-row-outline-s: #{tokens.$cds-global-space-3};
   //   --clr-base-vertical-offset-multi-row-outline-m: #{tokens.$cds-global-space-4};
 
+  //   --clr-base-horizontal-offset-2xs: #{tokens.$cds-global-space-0};
+  //   --clr-base-horizontal-offset-xs: #{tokens.$cds-global-space-2};
+  //   --clr-base-horizontal-offset-s: #{tokens.$cds-global-space-2};
   //   --clr-base-horizontal-offset-m: #{tokens.$cds-global-space-3};
   //   --clr-base-horizontal-offset-l: #{tokens.$cds-global-space-5};
   //   --clr-base-horizontal-offset-xl: #{tokens.$cds-global-space-7};
@@ -265,6 +320,7 @@
   //   --clr-base-gap-s: #{tokens.$cds-global-space-3};
   //   --clr-base-gap-m: #{tokens.$cds-global-space-5};
 
+  //   --clr-base-row-height-20: #{tokens.$cds-global-space-7};
   //   --clr-base-dg-row-height: #{mixins.baselinePx(20)};
 
   //   --clr-base-icon-size-xs: #{tokens.$cds-global-space-6};
@@ -276,6 +332,7 @@
   //   --clr-base-icon-size-3xl: #{tokens.$cds-global-space-7};
   //   --clr-base-icon-size-4xl: #{mixins.baselinePx(56)};
 
+  //   --clr-base-layout-space-0: #{tokens.$cds-global-space-0};
   //   --clr-base-layout-space-4xs: #{tokens.$cds-global-space-1};
   //   --clr-base-layout-space-3xs: #{tokens.$cds-global-space-2};
   //   --clr-base-layout-space-2xs: #{tokens.$cds-global-space-3};
@@ -288,5 +345,8 @@
   //   --clr-base-layout-space-3xl: #{tokens.$cds-global-space-10};
   //   --clr-base-layout-space-4xl: #{mixins.baselinePx(44)};
   //   --clr-base-layout-space-5xl: #{tokens.$cds-global-space-13};
+
+  //   --clr-base-icon-tooltip: var(--clr-base-icon-size-xs);
+  //   --clr-base-spinner-72: var(--clr-base-layout-space-4xl);
   // }
 }
