--- a/projects/angular/src/layout/density/_variables.density.scss
+++ b/projects/angular/src/layout/density/_variables.density.scss
@@ -20,14 +20,20 @@ $clr-base-typography-line-height-20: var(--clr-base-typography-line-height-20);
 $clr-base-typography-line-height-24: var(--clr-base-typography-line-height-24);
 $clr-base-typography-line-height-32: var(--clr-base-typography-line-height-32);
 
+$clr-base-border-stroke: var(--clr-base-border-stroke);
+
 $clr-base-border-radius-xs: var(--clr-base-border-radius-xs);
 $clr-base-border-radius-s: var(--clr-base-border-radius-s);
 $clr-base-border-radius-m: var(--clr-base-border-radius-m);
 $clr-base-border-radius-l: var(--clr-base-border-radius-l);
 $clr-base-border-radius-xl: var(--clr-base-border-radius-xl);
 
-$clr-base-vertical-offset-s: var(--clr-base-vertical-offset-s);
+$clr-base-offset-0: var(--clr-base-offset-0);
+
+$clr-base-vertical-offset-2xs: var(--clr-base-vertical-offset-2xs);
+$clr-base-vertical-offset-xs: var(--clr-base-vertical-offset-xs);
 $clr-base-vertical-offset-m: var(--clr-base-vertical-offset-m);
+$clr-base-vertical-offset-l: var(--clr-base-vertical-offset-l);
 $clr-base-vertical-offset-xl: var(--clr-base-vertical-offset-xl);
 
 $clr-base-vertical-offset-multi-row-s: var(--clr-base-vertical-offset-multi-row-s);
@@ -37,6 +43,9 @@ $clr-base-vertical-offset-multi-row-inline-m: var(--clr-base-vertical-offset-mul
 $clr-base-vertical-offset-multi-row-outline-s: var(--clr-base-vertical-offset-multi-row-outline-s);
 $clr-base-vertical-offset-multi-row-outline-m: var(--clr-base-vertical-offset-multi-row-outline-m);
 
+$clr-base-horizontal-offset-2xs: var(--clr-base-horizontal-offset-2xs);
+$clr-base-horizontal-offset-xs: var(--clr-base-horizontal-offset-xs);
+$clr-base-horizontal-offset-s: var(--clr-base-horizontal-offset-s);
 $clr-base-horizontal-offset-m: var(--clr-base-horizontal-offset-m);
 $clr-base-horizontal-offset-l: var(--clr-base-horizontal-offset-l);
 $clr-base-horizontal-offset-xl: var(--clr-base-horizontal-offset-xl);
@@ -45,6 +54,7 @@ $clr-base-row-height-xs: var(--clr-base-row-height-xs);
 $clr-base-row-height-s: var(--clr-base-row-height-s);
 $clr-base-row-height-m: var(--clr-base-row-height-m);
 $clr-base-row-height-l: var(--clr-base-row-height-l);
+$clr-base-row-height-20: var(--clr-base-row-height-20);
 $clr-base-dg-row-height: var(--clr-base-dg-row-height);
 
 $clr-base-gap-xs: var(--clr-base-gap-xs);
@@ -60,6 +70,7 @@ $clr-base-icon-size-2xl: var(--clr-base-icon-size-2xl);
 $clr-base-icon-size-3xl: var(--clr-base-icon-size-3xl);
 $clr-base-icon-size-4xl: var(--clr-base-icon-size-4xl);
 
+$clr-base-layout-space-0: var(--clr-base-layout-space-0);
 $clr-base-layout-space-4xs: var(--clr-base-layout-space-4xs);
 $clr-base-layout-space-3xs: var(--clr-base-layout-space-3xs);
 $clr-base-layout-space-2xs: var(--clr-base-layout-space-2xs);
@@ -72,3 +83,6 @@ $clr-base-layout-space-2xl: var(--clr-base-layout-space-2xl);
 $clr-base-layout-space-3xl: var(--clr-base-layout-space-3xl);
 $clr-base-layout-space-4xl: var(--clr-base-layout-space-4xl);
 $clr-base-layout-space-5xl: var(--clr-base-layout-space-5xl);
+
+$clr-base-icon-tooltip: var(--clr-base-icon-tooltip);
+$clr-base-spinner-72: var(--clr-base-icon-spinner-72);
